hice cambios en index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
             <div class="clearfix">
                 <p>
-                  A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+                  afsafasf We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
                 </p>
                 <img src="/wow/Images/galata-tower.png" class="col-md-6 float-md-end mb-3 ms-md-3" alt="torre">
                 <p>
