--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Karazhan Archives</title>
 </head>
-
 <body>
   <div>
     <header class="inamovible">
@@ -39,15 +38,15 @@
                     <a class="dropdown-item" href="#">Classes</a>
                   </li>
                   <li>
-                    <img src="images/blue-shado-pan-riding-tiger.png" width="150" heigh="100"
-                      class="dropdown-menu-img">
+                    <img src="images/blue-shado-pan-riding-tiger.png" width="150" heigh="100" class="dropdown-menu-img">
                     <a class="dropdown-item" href="#">Reputations</a>
                   </li>
                   <li>
                     <img src="images/tailoring.png" width="80" heigh="100" class="dropdown-menu-img">
                     <a class="dropdown-item" href="#">Professions</a>
                   </li>
-                  <li><img src="images/Raszageth.png" width="150" height="110"> <a class="dropdown-item" href="#">End
+                  <li><img src="images/Raszageth.png" width="150" height="110"> <a class="size-dropdown"
+                      class="dropdown-item" href="#">End
                       Game Content</a></li>
                 </ul>
               </li>
@@ -62,7 +61,7 @@
     </header>
   </div>
   <section class="content">
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel" class="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
           aria-label="Slide 1"></button>
@@ -71,7 +70,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+          <svg class="bd-placeholder-img-carousel1" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
             <rect width="100%" height="100%" fill="#777" />
           </svg>
@@ -84,8 +83,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <svg class="bd-placeholder-img-carousel2" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
             <rect width="100%" height="100%" fill="#777" />
           </svg>
           <div class="container">
@@ -97,8 +96,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <svg class="bd-placeholder-img-carousel3" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
             <rect width="100%" height="100%" fill="#777" />
           </svg>
           <div class="container">
@@ -119,82 +118,48 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-  </section>
-  <section>
-    <div class="parrafo prueba">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem amet esse, praesentium nam nesciunt tenetur
-        numquam laborum qui voluptas sequi quibusdam aspernatur unde soluta minima quidem voluptatibus consectetur ut
-        atque. Quod, illo est. Blanditiis consectetur quae atque dolorem expedita architecto fugiat pariatur recusandae
-        eligendi quisquam corrupti, mollitia sed fugit quos nisi voluptates veritatis dolore labore? Ipsum repellat,
-        esse dolorum quam maxime a dicta molestiae obcaecati reiciendis consectetur modi ullam repudiandae recusandae
-        beatae neque quasi eaque incidunt alias possimus nostrum, voluptatem ab? Asperiores magni obcaecati quam eaque?
-        Nulla eius ipsum error expedita et. Repellendus, dolor aut inventore saepe alias praesentium aspernatur aperiam,
-        velit odit perspiciatis cupiditate laudantium quasi totam, magnam dolores id nostrum quisquam ut. Molestias quos
-        veritatis cumque neque, quam aspernatur dolorum deleniti animi quae sed quisquam corporis placeat laborum quidem
-        excepturi ratione amet non laudantium! Reprehenderit dolorem exercitationem illo in ab quae corporis ex quam
-        aliquam fugit maxime pariatur, eius similique asperiores eum doloremque dolorum nisi, voluptatum alias iusto hic
-        nobis? Soluta minima ipsa hic aperiam voluptates. Voluptas deserunt alias, ipsam quas animi, provident dolorem
-        nostrum sunt ad, magnam non cumque aperiam? Impedit mollitia repellat, debitis id incidunt, voluptatum aperiam
-        quia obcaecati esse quasi eligendi magni eos, ipsam tempora at provident et sit amet aut sequi ab neque vitae
-        laboriosam possimus. Ipsam fugit excepturi quis harum expedita veritatis rem tempore voluptas iure, ad corrupti
-        nostrum, magni dolore suscipit deleniti sapiente aliquam obcaecati libero reiciendis fuga pariatur voluptate
-        commodi ipsum tempora? Molestias repudiandae, minima deleniti ducimus maxime incidunt! Temporibus tenetur
-        voluptatum doloribus quis veniam reprehenderit nobis vero quae quisquam? Eius explicabo accusantium unde eveniet
-        praesentium iste totam error ab perspiciatis. Blanditiis eligendi id iusto beatae ratione minus facilis
-        reiciendis atque modi, cumque saepe quibusdam ex deserunt expedita consequatur repellat in perspiciatis
-        incidunt? Facere quod voluptatem nihil ullam atque amet deserunt dolore reiciendis doloribus molestias odit
-        nesciunt, sunt porro minus voluptates culpa? Debitis iure sit, excepturi eligendi dolores, repellat mollitia
-        repudiandae porro, modi laudantium similique consequuntur adipisci quia maxime aliquid neque beatae accusamus
-        accusantium quae. Soluta dicta at ipsa iusto fugit repellat facere architecto ipsam natus. Nobis, minus
-        consequatur. Hic, accusamus. Accusamus similique, rem hic quam nobis cupiditate error facilis repudiandae,
-        maiores, ratione eum sit? Iste delectus minus placeat excepturi. Eaque commodi dignissimos, suscipit quod quos
-        incidunt voluptatum sunt dicta adipisci? Animi, autem. Minus, quidem est? Rem quaerat nihil aliquam. Quibusdam
-        aliquam ipsa deleniti. Necessitatibus vel ex sequi ducimus assumenda quae minus! Ex accusamus excepturi fuga
-        distinctio consequatur praesentium rerum, quidem quia eius quod quo reiciendis quas. Esse odit nihil, et aperiam
-        illum perspiciatis quaerat explicabo voluptatibus ipsa dolorem fugit, repudiandae eum enim ea! Maxime ab sequi
-        maiores, architecto harum animi? Eveniet totam nulla, veritatis tempore commodi temporibus saepe accusantium
-        dolores, nostrum distinctio aspernatur esse deserunt. Ea optio libero provident! Magnam praesentium sint ab
-        optio ipsam fuga nemo minima mollitia aliquid dolorum. Doloremque voluptate ratione minus, eos eum nam iusto
-        dolorem quia laboriosam placeat itaque sit enim nesciunt. Omnis natus, quos illum ad repellendus nam fuga esse
-        provident ex enim repellat voluptates id eius, officiis, architecto nemo sequi sint. Atque exercitationem
-        consectetur sunt cum, debitis alias aliquam ab minus magnam quis harum, eum quae. Quidem quae, iure fugit quos
-        mollitia unde est nam error recusandae nemo laborum omnis dolorum non molestias earum vel natus asperiores
-        aliquam perspiciatis placeat impedit ipsam. In temporibus voluptate architecto repudiandae! Harum vel nihil
-        fugiat, ratione maiores consectetur repellendus a facilis ducimus et, cupiditate minus amet neque porro illum
-        libero aut at quisquam omnis! Rem nostrum nobis facilis quidem repellat error expedita laboriosam repudiandae
-        totam, explicabo eligendi reiciendis ut cum incidunt voluptas, atque molestiae dicta odio quas! Pariatur minima
-        dolores nemo molestiae doloribus. Totam deserunt alias ratione, architecto voluptate rerum. Dolorum ad, maiores
-        voluptatem nostrum corporis dolorem maxime nulla voluptatum officia perspiciatis distinctio eum voluptate eaque
-        ratione iure praesentium repellat assumenda. Cupiditate, delectus accusantium minus minima harum illum magni
-        soluta ab molestiae consectetur iste consequatur quisquam reiciendis repellat fuga corporis. Rem, repellat sequi
-        in pariatur quasi sint sunt laudantium atque possimus hic ipsam earum placeat non nemo, delectus iste soluta
-        similique, nobis alias odio est unde quam! Vero dignissimos officia in sunt? Beatae mollitia assumenda incidunt
-        voluptatibus repudiandae iste eaque esse, qui sapiente ab distinctio. Magni animi commodi incidunt doloremque
-        maxime vel laudantium aut, quod sunt inventore, repellendus autem quibusdam enim voluptate architecto maiores
-        assumenda velit asperiores delectus dolor saepe unde nesciunt. Praesentium aut, architecto similique, dolore eos
-        ab ut laudantium officiis nobis sapiente, maxime molestias sunt? Possimus eius voluptates accusamus id
-        consequuntur itaque sit, inventore quod. Tempore impedit nulla minus eos assumenda, voluptatem neque aut
-        obcaecati magnam ex mollitia vero asperiores corrupti ipsa quis non dolorem quaerat facilis eum laboriosam
-        suscipit voluptates ad! Minima voluptate explicabo reiciendis aspernatur fuga aut, ullam eius cum
-        exercitationem. Aliquam architecto vitae reiciendis obcaecati? Fuga quos laboriosam cum eum repellendus
-        voluptatum quibusdam laudantium aliquam reprehenderit doloribus iure ex officiis explicabo, id provident natus,
-        veritatis aliquid quia, quis dignissimos distinctio vero. Quas vero consequuntur, quos nulla hic rerum a
-        aspernatur, enim corrupti sapiente voluptatem unde iure quasi nemo pariatur doloribus. Quidem obcaecati, atque
-        dolore, doloremque et quia quae molestiae omnis quod quasi beatae placeat debitis provident totam dolor deserunt
-        inventore eaque id optio, aut cum? Deleniti numquam deserunt quo rerum odit expedita, dolores nam est debitis
-        blanditiis veniam consequatur a sed commodi nisi incidunt laboriosam maiores natus. At repellendus excepturi
-        animi incidunt iusto nostrum pariatur suscipit ipsa eveniet eum placeat, totam ducimus. Quam ab magnam rerum
-        amet perferendis adipisci doloribus dicta magni sit placeat, tempore temporibus. Ex id alias vero molestias
-        asperiores qui harum, nesciunt in tempore molestiae debitis error illum quibusdam explicabo officia architecto,
-        consectetur recusandae eos corrupti dolorum consequuntur cupiditate! Ipsum officia obcaecati placeat, eligendi
-        non corporis qui enim veritatis, accusantium eius dolore eveniet. Corporis beatae nobis architecto earum
-        similique officia, ad mollitia excepturi! Vitae voluptate, non ex totam autem excepturi explicabo quisquam
-        laudantium. Quod, iste vitae reiciendis, voluptates aperiam vero deleniti quasi nemo magnam cum nobis laborum
-        numquam sit repellat fuga sunt, nisi delectus rerum sapiente repellendus odio modi.</p>
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <svg class="bd-placeholder-img-news1" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
+              aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                dy=".3em">Thumbnail</text>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">Post title</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <svg class="bd-placeholder-img-news2" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
+              aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
+              <title>Placeholder</title>
+            </svg>
+          </div>
+        </div>
+      </div>
     </div>
+    <footer></footer>
   </section>
-  <footer>
-  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
